--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="layout" *ngIf="isLogin; else elseBlock">
+<div class="layout" ><!--*ngIf="isLogin; else elseBlock"-->
   <app-header></app-header>
 
   <div class="main-section">
