before implement more button

--- a/src/app/components/tab/tabs-collection/tabs-collection.component.html
+++ b/src/app/components/tab/tabs-collection/tabs-collection.component.html
@@ -1,4 +1,24 @@
 <div class="tab-wrapper">
+  <ng-container *ngIf="shouldShowOverflowMenu()">
+    <div class="more-tab-item">
+      <span>More</span>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="size-6"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="m4.5 5.25 7.5 7.5 7.5-7.5m-15 6 7.5 7.5 7.5-7.5"
+        />
+      </svg>
+    </div>
+  </ng-container>
+
   <div class="tabs-container" #tabsContainer>
     <div
       class="tab-item"
@@ -16,23 +36,6 @@
         &times;
       </button>
     </div>
-  </div>
-  <div class="more-tab-item">
-    <span>More</span>
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      fill="none"
-      viewBox="0 0 24 24"
-      stroke-width="1.5"
-      stroke="currentColor"
-      class="size-6"
-    >
-      <path
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        d="m4.5 5.25 7.5 7.5 7.5-7.5m-15 6 7.5 7.5 7.5-7.5"
-      />
-    </svg>
   </div>
 </div>
 <div class="tab-content-container" #tabContentContainer></div>
